[gd_scene load_steps=4 format=3 uid="uid://b1dijperlgmsl"]

[ext_resource type="Script" path="res://Source/UI and Screens/Screens/main_menu.gd" id="1_kx54y"]
[ext_resource type="Texture2D" uid="uid://ep3dva5e7nvh" path="res://Assets/World Creation Assets/Parallax/s4m_ur4i-bg_clouds.png" id="2_2h06g"]
[ext_resource type="Texture2D" uid="uid://skmnt5fqygcm" path="res://Assets/UI Assets/H_M_S Bars/GUI.png" id="3_4r4pl"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kx54y")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -140.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2h06g")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="."]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 92.5
offset_top = -114.0
offset_right = 272.5
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
text = "soulslike
platformer
project"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 140.5
offset_top = -34.5
offset_right = 224.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "start"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "quit"

[node name="TutorialPopup" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Sprite2D" type="Sprite2D" parent="TutorialPopup"]
position = Vector2(288, 144)
scale = Vector2(7, 7)
texture = ExtResource("3_4r4pl")
region_enabled = true
region_rect = Rect2(49, 97, 30, 30)

[node name="Label" type="Label" parent="TutorialPopup"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 160.0
offset_top = 78.0
offset_right = 408.0
offset_bottom = 154.0
text = "would you
 like to 
skip the 
tutorial?"
horizontal_alignment = 1

[node name="Yes" type="Button" parent="TutorialPopup"]
layout_mode = 0
offset_left = 224.0
offset_top = 192.0
offset_right = 278.0
offset_bottom = 216.0
text = "yes"

[node name="No" type="Button" parent="TutorialPopup"]
layout_mode = 0
offset_left = 299.0
offset_top = 192.0
offset_right = 351.0
offset_bottom = 216.0
text = "no"

[connection signal="button_up" from="VBoxContainer/Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_quit_button_up"]
[connection signal="button_down" from="TutorialPopup/Yes" to="." method="_on_yes_button_down"]
[connection signal="button_down" from="TutorialPopup/No" to="." method="_on_no_button_down"]
